# demo6_vscode_cmake_Lib

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: make_dll.bat  mathlib.cpp  mathlib.h  test1.cpp  test2.cpp
